apps/adguard/svc-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-ui
  namespace: adguard
spec:
  type: ClusterIP
  selector:
    app: adguard
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
