apps/adguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  namespace: adguard
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: adguard.downhill.dozzly.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard-ui
                port:
                  number: 3000
  tls:
    - hosts: [adguard.downhill.dozzly.network]
      secretName: adguard-tls
